fix(tile): add token for horizontal gap (#1658)

--- a/projects/ng-aquila/src/shared-styles/theming/tokens.scss
+++ b/projects/ng-aquila/src/shared-styles/theming/tokens.scss
@@ -781,6 +781,7 @@ $nx-theme: (
   tile-vertical-padding: 14px 16px,
   tile-horizontal-padding: 14px 16px,
   tile-spacing: 16px,
+  tile-layout-horizontal-spacing: 16px,
   tile-group-spacing: 16px,
   tile-indicator-top: 12px,
   tile-indicator-right: 12px,
